<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_playstation"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/login_title"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/login_message"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginHorizontal="75dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/login_user"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/login_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/login_login"
            android:onClick="onClickLogin"
            android:background="@drawable/button_solid"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_register"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/login_register"
            android:onClick="onClickRegister"
            android:background="@drawable/hallow_button"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_forgotten_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/forgotten_password_title"
        android:onClick="onClickForgottenPassword"
        android:textAllCaps="false"
        android:style="@style/Widget.AppCompat.Button.Borderless"/>

</LinearLayout>