<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_playstation"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="32dp"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/register_message"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginHorizontal="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/user_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/login_user"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/login_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/password_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/password_verification"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/submit_button"
            android:textColor="@color/white"
            android:fontFamily="@font/proxima_nova"
            android:text="@string/register"
            android:background="@drawable/button_solid"
            android:layout_marginBottom="20dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>